3-3-09: #1357, changes to phet-info.php service
3-3-09: #1355, user-friendly names for the info that PhET collects
2-26-09: #1320, fix how phet installation is detected and properties accessed
2-26-09: #1274, revise logging 
2-25-09 #1331, fix user_installation_timestamp in session message
2-23-09 #1237, brute-force parsing of results returned by phet-info.php
2-23-09: #1286, result of sending a statistics message is not parsed
2-23-09: #1237, first attempt at using phet-info.php, I don't understand the error returned
2-23-09: XMLUtils, used by both phet_info.php and submit_message.php
2-23-09: #1286, indicated where parsing of statistics message results should be handled
2-23-09: #1285, sending statistics message only returns true if debug output is enabled
2-23-09: #1248, field user_installation_timestamp is missing from Java session message
2-23-09: #1254, session counts should not be incremented if Software Agreement is declined
2-21-09: make ErrorDialog handle html formatting & styling so that clients can pass in any string
2-21-09: provide default title for ErrorDialog, since all current uses are "Error"
2-21-09: #1276, create PlainMessageDialog for replacing JOptionPanes that don't repaint
2-21-09: #1276, fix a bunch of dialogs by subclassing PaintImmediateDialog
2-19-09: #1236, -Ddeployment.scenario=ABC to force the deployment scenario to value ABC
2-19-09: #1236, add abstraction of phet installer version (PhetInstallerVersion)
2-19-09: #1236, get/set/test ask-me-later durations for sim and installer updates
2-19-09: #1236, "no update available" dialog hierarchy for sims and installer
2-19-09: #1236, rename PhetInfoQuery to VersionInfoQuery since (for now) it only deals with version info
2-19-09: #1236, replace notifiers with PhetInfoQuery
2-18-09: #1256, make the statistics details dialog resizable
2-18-09: #1255, make software agreement dialog resizeable
2-18-09: move all phetcommon URLs to PhetCommonConstants