@@ -13,10 +13,16 @@ public class PhetCommonConstants {
     public static final String PHET_LICENSE_URL = PHET_HOME_URL + "/about/licensing.php";
     
     // services
-    public static final String SIM_REDIRECT_URL = PHET_HOME_URL + "/services/sim-redirect.php";
+    public static final String SIM_WEBSITE_REDIRECT_URL = PHET_HOME_URL + "/services/sim-website-redirect.php";
     public static final String SIM_JAR_REDIRECT_URL = PHET_HOME_URL + "/services/sim-jar-redirect.php";
     public static final String PHET_INFO_URL = PHET_HOME_URL + "/services/phet-info.php";
     public static final String STATISTICS_SERVICE_URL = PHET_HOME_URL + "/statistics/submit_message.php";
+    
+    // service request version numbers
+    public static final int SIM_WEBSITE_REDIRECT_VERSION = 1; // associated with SIM_WEBSITE_REDIRECT_URL
+    public static final int SIM_JAR_REDIRECT_VERSION = 1; // associated with SIM_JAR_REDIRECT_URL
+    public static final int SIM_VERSION_VERSION = 1; // <sim_version> request to PHET_INFO_URL
+    public static final int PHET_INSTALLER_UPDATE_VERSION = 1; // <phet_installer_update> request to PHET_INFO_URL
     
     // Properties used to set the locale.
     // Since these need to be usable via JNLP, they begin with "javaws".
